tests/invalid/unreachable_goto.c
int main() {
    goto end;
    int x = 1;
end:
    return x;
}
